<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_title"
        android:textSize="21sp"
        android:textColor="@color/carrot_black"
        android:fontFamily="@font/roboto"
        android:textFontWeight="600"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        android:layout_marginStart="4dp" />

    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_complete"
        android:textSize="21sp"
        android:textColor="@color/squaregray"
        android:fontFamily="@font/roboto"
        android:textFontWeight="600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        android:layout_marginEnd="14dp" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linegray"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/sv_middle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_bottom"
        android:layout_marginTop="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="@id/layout_middle"
                app:layout_constraintStart_toStartOf="@id/layout_middle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/layout_picture"
                    app:layout_constraintStart_toStartOf="@id/layout_picture"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/shape_rectangle"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="17dp"
                    android:layout_margin="15dp">

                    <ImageView
                        android:id="@+id/iv_camera"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_camera"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="5dp"/>

                    <TextView
                        android:id="@+id/tv_pic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/write_pic"
                        android:textSize="16sp"
                        android:textColor="@color/carrot_black"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="500"
                        app:layout_constraintTop_toBottomOf="@id/iv_camera"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_camera"/>
                    <TextView
                        android:id="@+id/tv_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/write_camera"
                        android:textSize="16sp"
                        android:textColor="@color/carrot_black"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="500"
                        app:layout_constraintStart_toEndOf="@id/tv_pic"
                        app:layout_constraintTop_toBottomOf="@id/iv_camera"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="@id/layout_picture"
                    app:layout_constraintBottom_toBottomOf="@id/layout_camera"
                    app:layout_constraintStart_toEndOf="@id/layout_camera"
                    app:layout_constraintEnd_toEndOf="@id/layout_picture"
                    android:layout_marginHorizontal="14dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/item_picture_list" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/linegray"
                app:layout_constraintTop_toBottomOf="@id/layout_picture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="14dp" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/write_edit_title"
                android:textSize="20sp"
                android:textColor="@color/squaregray"
                android:fontFamily="@font/roboto"
                android:textFontWeight="500"
                android:background="@null"
                android:paddingVertical="20dp"
                android:paddingHorizontal="14dp"
                app:layout_constraintTop_toBottomOf="@id/line2" />

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/linegray"
                app:layout_constraintTop_toBottomOf="@id/et_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="14dp"/>

            <EditText
                android:id="@+id/et_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/write_category"
                android:textSize="20sp"
                android:textColor="@color/squaregray"
                android:fontFamily="@font/roboto"
                android:textFontWeight="500"
                android:background="@null"
                android:paddingVertical="20dp"
                android:paddingHorizontal="14dp"
                app:layout_constraintTop_toBottomOf="@id/line3" />

            <View
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/linegray"
                app:layout_constraintTop_toBottomOf="@id/et_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="14dp"/>

            <LinearLayout
                android:id="@+id/layout_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/line4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_won"
                    android:textSize="20sp"
                    android:textColor="@color/squaregray"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="500"
                    android:layout_marginStart="14dp"/>

                <EditText
                    android:id="@+id/et_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/write_price"
                    android:textSize="20sp"
                    android:textColor="@color/squaregray"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="500"
                    android:background="@null"
                    android:layout_weight="1"
                    android:paddingVertical="20dp"/>

                <ImageButton
                    android:id="@+id/btn_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_no_check"
                    android:background="@color/white"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/tv_suggest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_suggest"
                    android:textSize="16sp"
                    android:textColor="@color/squaregray"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="500"
                    android:layout_gravity="center"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="14dp"/>

            </LinearLayout>

            <View
                android:id="@+id/line5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/linegray"
                app:layout_constraintTop_toBottomOf="@id/layout_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="14dp"/>

            <EditText
                android:id="@+id/et_write"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_write"
                android:textSize="20sp"
                android:textColor="@color/squaregray"
                android:fontFamily="@font/roboto"
                android:textFontWeight="500"
                android:gravity="top"
                android:background="@null"
                android:paddingVertical="20dp"
                android:paddingHorizontal="14dp"
                app:layout_constraintTop_toBottomOf="@id/line5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/line6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linegray"
        app:layout_constraintTop_toBottomOf="@id/sv_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/sv_middle"
        app:layout_constraintEnd_toEndOf="@id/sv_middle"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_word"
            android:textSize="17sp"
            android:textColor="@color/carrot_black"
            android:fontFamily="@font/roboto"
            android:textFontWeight="500"
            app:layout_constraintStart_toEndOf="@id/iv_word"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iv_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_range"
            app:layout_constraintStart_toEndOf="@id/tv_word"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="25dp"/>

        <TextView
            android:id="@+id/tv_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_range"
            android:textSize="17sp"
            android:textColor="@color/carrot_black"
            android:fontFamily="@font/roboto"
            android:textFontWeight="500"
            app:layout_constraintStart_toEndOf="@id/iv_range"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>